--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "jss": "^10.8.2",
+    "jss-preset-default": "^10.8.2",
     "vue": "^3.0.0",
+    "vue-jss": "^0.0.4",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
